# cli-wrapper-ui

./: README.md  package-lock.json  package.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  main.rs
