[package]
name = "cli-wrapper-ui"
version = "0.1.0"
description = "Experimental way to wrap generic UI around some helper scripts"
authors = [ "Chris Czach" ]
license = "MIT"
repository = "https://github.com/chrisczach/cli-wrapper-ui"
default-run = "cli-wrapper-ui"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }
anyhow = "1.0"

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "cli-wrapper-ui"
path = "src/main.rs"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
